[tool.poetry]
name = "act-lightrail-api"
version = "0.1.0"
description = "Python wrapper for Transport Canberra's GTFS-R Lightrail feed"
authors = ["king-millez <Millez.Dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
protobuf = "^3.15.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
